# tgapp

./: CMakeLists.txt  README.md  collectcontactsworker.cpp  collectcontactsworker.h  collectpostsworker.cpp  collectpostsworker.h  dispatchworker.cpp  dispatchworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
